# convertbar

./: CLAUDE.md  PLAN.md  RECOMMENDATIONS.md  SPEC.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: converter.rs  db.rs  handbrake.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: converter.rs  handbrake.rs  mod.rs  queue.rs  settings.rs
src/components/: ActiveJob.tsx  DropZone.tsx  HistoryItem.tsx  QueueItem.tsx  TabBar.tsx
src/hooks/: useHistory.ts  useQueue.ts  useSettings.ts
src/lib/: format.ts  tauri.ts
src/pages/: HistoryPage.tsx  QueuePage.tsx  SettingsPage.tsx
