[package]
name = "convertbar"
version = "0.5.0"
description = "macOS menu bar app for batch video conversion using HandBrakeCLI"
authors = ["Rouven Hurling"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rouvenhurling/mac-menubar-convert"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "convertbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
trash = "5"
regex = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
tauri-plugin-notification = "2"

